Bug 104652 - [EFL][WebGL] Regression(r137211) WebGL is broken with NVIDIA Drivers.
Summary: [EFL][WebGL] Regression(r137211) WebGL is broken with NVIDIA Drivers.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit EFL (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Linux
: P2 Normal
Assignee: Kalyan
URL:
Keywords:
Depends on:
Blocks: 104553
  Show dependency treegraph
 
Reported: 2012-12-11 02:33 PST by Kalyan
Modified: 2012-12-11 09:36 PST (History)
5 users (show)

See Also:


Attachments
WIP (4.39 KB, patch)
2012-12-11 03:26 PST, Kalyan
no flags Details | Formatted Diff | Diff
patch (5.44 KB, patch)
2012-12-11 04:16 PST, Kalyan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kalyan 2012-12-11 02:33:00 PST
After https://bugs.webkit.org/show_bug.cgi?id=104553 , WebGL doesnt work anymore on devices with NVidia Drivers.
Comment 1 Kalyan 2012-12-11 03:26:29 PST
Created attachment 178765 [details]
WIP
Comment 2 Kalyan 2012-12-11 03:28:02 PST
Reverted some of the changes which could be causing this.
Comment 3 Kalyan 2012-12-11 04:16:37 PST
Created attachment 178773 [details]
patch
Comment 4 WebKit Review Bot 2012-12-11 04:55:59 PST
Comment on attachment 178773 [details]
patch

Clearing flags on attachment: 178773

Committed r137294: <http://trac.webkit.org/changeset/137294>
Comment 5 WebKit Review Bot 2012-12-11 04:56:02 PST
All reviewed patches have been landed.  Closing bug.